# Magic-Assistant

./: .gitignore  README.md  config.yml  pyproject.toml
config/: magic_assistant.yml
deployment/: .env  Dockerfile  docker-compose.yml
deployment/milvus/: .env  docker-compose.yml
deployment/postgresql/: postgresql.conf
doc/en/: task_list.md
docs/: mkdocs.yml
docs/docs/: client.md  index.md  install.md
docs/site/: 404.html  index.html
examples/plan_agent/: start_plan_agent.sh
examples/restful_io/: start_restful_io_agent.sh
examples/role_play_agent/: start_role_play_agent.sh
magic_assistant/: agent.py  base_model_test.py  cli.py  cmd_test.py  globals.py  log.py  main.py  message.py  prompt.py  tips.py  web_page.py
magic_assistant/action/: action.py  action_to_str.py  generative_action.py
magic_assistant/agent/: agent_factory.py  agent_manager.py  base_agent.py  role.py
magic_assistant/chain/: chain.py  module.py
magic_assistant/config/: agent_config.py  base_config.py  global_config.py  llm_config.py  milvus_config.py  misc_config.py  model_config.py  oss_config.py  postgre_config.py  role_config.py  vector_db_config.py  web_config.py
magic_assistant/data/: data.py  data_manager.py  utils.py
magic_assistant/db/: base_sql_db.py  orm.py  postgre.py
magic_assistant/io/: shell_io.py  websocket_io.py
magic_assistant/memory/: memory_item.py  memory_operator.py  simeple_memory.py
magic_assistant/oss/: minio_adapter.py  oss_factory.py
magic_assistant/plugin/: base_plugin.py  doc_reader_plugin.py  python_plugin.py  shell_plugin.py
magic_assistant/plugins/: base_plugin.py  bing_plugin.py  provided_plugins.py  python_plugin.py  shell_plugin.py
magic_assistant/sandbox/: sandbox.py  sandbox_manager.py
magic_assistant/tools/: doc_reader.py
magic_assistant/utils/: globals.py  tips.py  utils.py
magic_assistant/vector/: base_vector_db.py  milvus_adapter.py  orm_vector.py  pgvector_adapter.py  vector.py  vector_db_factory.py
magic_assistant/web/: agent_router.py  data_router.py  web.py  websocket_client.py
scripts/: build_docker.sh  start_cli_mode.sh  update_git.sh
scripts/finetune/: merge_fastchat.sh  skip_lang_code.sh  split.sh  trans_form_html_to_md.sh
(+53 files in other folders)
